test/fail/hex_punc02.v3
//@parse = ParseError @ 3:31
class hex_punc01 {
	var d: int = 0x0345;
	var e: int = 0x06.789;
}
